# Lecture-Notes-Summarizer-OCR

./: .gitignore  Book_processor.py  Lecture_notes.py  README.md  pic_ocr.py  pyproject.toml
outputs/: Entrepreneurship_pages_30to40_extracted.txt  Entrepreneurship_pages_30to40_qa.txt  Entrepreneurship_pages_30to40_summary.txt  Entrepreneurship_pages_30to66_extracted.txt  Entrepreneurship_pages_30to66_qa.txt  Entrepreneurship_pages_30to66_summary.txt
